# FamilyOS

./: .env  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Family_AI.code-profile  LICENSE  MemoryOS.code-workspace  README.md  SECURITY.md  app.py  family.db  main.py  pyproject.toml  requirements-dev.txt  test_storage.py
.github/: copilot-instructions.md
action/: README.md  actuators.py  capabilities.py  outcome_capture.py  runner.py  sandbox.py  specs.py  types.py  validators.py
affect/: README.md  RESEARCH_ENHANCED.md  __init__.py  affect_aware_service.py  analyzer.py  bus_adapter.py  calibration.py  enhanced_classifier.py  policy_bridge.py  realtime_classifier.py  state.py
api/: README.md  auth.py  schemas.py
arbitration/: README.md  arbiter.py  engine.py  habit.py  impact_assessor.py  manager.py  planner.py  planner_bridge.py  risk.py  self_model.py
architecture_diagrams/: README.md  project_architecture_part1.mmd  project_architecture_part2.mmd  project_architecture_part3.mmd  project_architecture_part4.mmd
attention_gate/: __init__.py  backpressure.py  enhanced_gate.py  gate_service.py  intent_rules.py  policy_bridge.py  readme.md  salience.py  trace.py  types.py
cognitive_events/: __init__.py  backpressure_handler.py  consumer_groups.py  dispatcher.py  dlq_manager.py  types.py
consolidation/: README.md  compactor.py  compactor_impl.py  consolidator.py  kg.py  kg_jobs.py  manager.py  reconsolidation.py  replay.py  rollups.py
context_bundle/: README.md  __init__.py  mmr_diversifier.py  orchestrator.py  provenance_tracer.py  result_fuser.py  store_fanout.py
contracts/: ARCHITECTURE_ALIGNMENT_REPORT.json  CHANGELOG.md  CONTRACT_CHANGE_PROCESS.md  CONTRACT_CHANGE_QUICK_REF.md  CONTRACT_IMPLEMENTATION_COMPLETE.md  DEVELOPER_WORKFLOW.md  DOCUMENTATION_INDEX.md  README.md  contract_checklist.md  envelope_analysis.md
core/: README.md  curator.py  goals.py  salience.py  salience_gateway.py  working_memory.py  writer.py
cortex/: README.md  __init__.py  bandit.py  calibration.py  features.py  predictive_model.py
data/: debug_episodic.db  episodic.db  memory.db  vector.db
deployments/: README.md  SETUP_GUIDE.md
docs/: ARCHITECTURE_QUICK_REF.md  ARCHITECTURE_SOURCE_OF_TRUTH.md  COMPREHENSIVE_ARCHITECTURE_REFERENCE.md
drives/: README.md  drives.py  homeostasis.py  reward_model.py
embeddings/: README.md
episodic/: README.md  sequences.py  service.py  store.py  types.py  utils.py
events/: README.md  attention_gate.py  bus.py  cognitive_events.py  dispatcher.py  filters.py  handlers.py  middleware.py  persistence.py  publisher.py  serialization.py  subscription.py  types.py  utils.py  validation.py  write_handler.py
feature_flags/: __init__.py  cli.py  flag_manager.py  test_cognitive_integration.py
hippocampus/: README.md  api.py  bridge.py  completer.py  sdr.py  separator.py  service.py  storage_fallback.py  types.py  writer.py
imagination/: README.md  api.py  dreaming.py  policy_bridge.py  simulation_engine.py  store_fallback.py  types.py  world.py
intent/: router.py  router_config.yaml
kg/: temporal.py
learning/: README.md  anomaly_detector.py  continuous_learner.py  engine.py  feedback_processor.py  learning_coordinator.py  neuromod.py  neuromod_integration.py  optimizers.py  outcome_analyzer.py  pattern_analyzer.py  performance_monitor.py  state.py  types.py  weight_adjuster.py
memory_steward/: README.md  __init__.py  commit_manager.py  deduplication_engine.py  orchestrator.py  receipt_generator.py  redaction_coordinator.py  space_resolver.py
metacognition/: README.md  confidence.py  error_detector.py  monitor.py  reflection.py
ml_capsule/: README.md  memory_formula_pack_loader.py
observability/: __init__.py  context.py  dashboard.py  envelope.py  logging.py  memory_trace.py  metrics.py  middleware.py  trace.py
perception/: README.md  api.py  fusion.py  (+2 more)
(+1319 files in other folders)
